# FinBro_Streamlit

./: Basic_Structure.py  README.md  app.py  fixing.ipynb  intents.json  portfolio_creator.py  portfolio_db.py  requirements.txt  streamlit_app.py  test.py
FinBro/: pyproject.toml
FinBro/FinBro/: apps.py  models.py
FinBro/FinBro/migrations/: 0001_initial.py
FinBro/config/: asgi.py  settings.py  urls.py  wsgi.py
data/: check.py  portfolio.pkl
data/ML_Models/: Jafire.h5  Jafire_classes.pkl  Jafire_words.pkl
